# RSS-Translator-AI

./: .gitignore  Dockerfile  README.md  docker-compose.deploy.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.jetclient/Engine/: jetclient.md
.jetclient/Engine/OpenRouter/: Anthropic_ Claude 3 Haiku.md  Google Flash.md  Google_ Gemini Flash 1.5.md  Meta_ Llama 3 70B Instruct.md  Mistral_ 7B Instruct .md  OpenAI.md  OpenAI_ GPT-3.5 Turbo.md  OpenAI_ GPT-4o.md  _folder.md
.jetclient/Engine/Text/: content.md  prompt.md  title.md  vietnamese.md
config/: settings.py
core/: forms.py  models.py  tasks.py  views.py
core/management/commands/: run_dev.py
requirements/: dev.txt
templates/admin/: o_feed_batch_modify.html
translator/models/: base.py  openrouterai.py
utils/: text_handler.py
