[tool.poetry]
name = "rss-translator-ai"
version = "0.1.0"
description = ""
authors = ["Libukai <xiaobuyao@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "^0.7.0"
anthropic = "^0.40.0"
anyio = "^4.6.2.post1"
asgiref = "^3.8.1"
beautifulsoup4 = "^4.12.3"
brotli = "^1.1.0"
bs4 = "^0.0.2"
bx-django-utils = "^84"
bx-py-utils = "^106"
cachetools = "^5.5.0"
certifi = "^2024.8.30"
cffi = "^1.17.1"
charset-normalizer = "^3.4.0"
cityhash = "^0.4.7"
click = "^8.1.7"
cryptography = "43.0.3"
dateutils = "^0.6.12"
deepl = "^1.20.0"
defusedxml = "^0.7.1"
distro = "^1.9.0"
django = "5.0.8"
django-debug-toolbar = "^4.4.6"
django-encrypted-model-fields = "^0.6.5"
django-huey-monitor = "^0.9.0"
django-tagulous2 = { git = "https://github.com/versun/django-tagulous2" }
django-text-translator = "^2024.5.1"
easytranslator = "^2024.6.20"
fake-useragent = "^1.5.1"
feed2json = "^2024.4.29"
feedgen = "^1.0.0"
feedparser = "^6.0.11"
filelock = "^3.16.1"
fsspec = "^2024.10.0"
gevent = "^24.11.1"
google-ai-generativelanguage = "0.6.10"
google-api-core = "^2.23.0"
google-api-python-client = "^2.154.0"
google-auth = "^2.36.0"
google-auth-httplib2 = "^0.2.0"
google-generativeai = "^0.8.3"
googleapis-common-protos = "^1.66.0"
greenlet = "^3.1.1"
grpcio = "^1.68.0"
grpcio-status = "^1.68.0"
h11 = "^0.14.0"
html2text = "^2024.2.26"
httpcore = "^1.0.7"
httplib2 = "^0.22.0"
httpx = "^0.28.0"
huey = "^2.5.2"
huggingface-hub = "^0.26.3"
idna = "^3.10"
joblib = "^1.4.2"
langdetect = "^1.0.9"
lxml = "^5.3.0"
lxml-html-clean = "^0.4.1"
markdownify = "^0.14.1"
mistune = "^3.0.2"
newspaper4k = "^0.9.3.1"
nltk = "^3.9.1"
numpy = "^2.1.3"
openai = "^1.55.3"
opyml = "^0.1.2"
packaging = "^24.2"
pandas = "^2.2.3"
pillow = "^11.0.0"
proto-plus = "^1.25.0"
protobuf = "^5.29.0"
pyasn1 = "^0.6.1"
pyasn1-modules = "^0.4.1"
pycparser = "^2.22"
pydantic = "^2.10.2"
pydantic-core = "^2.27.1"
pydeeplx = "^1.0.7"
pyparsing = "^3.2.0"
python-dateutil = "^2.9.0.post0"
python-stdnum = "^1.20"
pytz = "^2024.2"
pyyaml = "^6.0.2"
regex = "^2024.11.6"
requests = "^2.32.3"
requests-file = "^2.1.0"
rsa = "^4.9"
setuptools = "^75.6.0"
sgmllib3k = "^1.0.0"
six = "^1.16.0"
sniffio = "^1.3.1"
socksio = "^1.0.0"
soupsieve = "^2.6"
sqlparse = "^0.5.2"
tiktoken = "^0.8.0"
tldextract = "^5.1.3"
tokenizers = "^0.21.0"
translators = "^5.9.3"
tqdm = "^4.67.1"
typing-extensions = "^4.12.2"
tzdata = "^2024.2"
uritemplate = "^4.1.1"
urllib3 = "^2.2.3"
uvicorn = "^0.32.1"
volcengine-python-sdk = { extras = ["ark"], version = "^1.0.111" }
whitenoise = "^6.8.2"
zope-event = "^5.0"
zope-interface = "^7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
