[tool.poetry]
name = "rss-translator-ai"
version = "0.1.0"
description = ""
authors = ["Libukai <xiaobuyao@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "5.0.8"
django-encrypted-model-fields = "^0.6.5"
django-tagulous2 = { git = "https://github.com/versun/django-tagulous2" }
opyml = "^0.1.2"
tiktoken = "^0.8.0"
feedparser = "^6.0.11"
feedgen = "^1.0.0"
httpx = "^0.28.0"
dateutils = "^0.6.12"
huey = "^2.5.2"
gevent = "^24.11.1"
uvicorn = "^0.32.1"
whitenoise = "^6.8.2"
fake-useragent = "^1.5.1"
cityhash = "^0.4.7"
bs4 = "^0.0.2"
lxml = "^5.3.0"
lxml-html-clean = "^0.4.1"
python-dateutil = "^2.9.0.post0"
html2text = "^2024.2.26"
mistune = "^3.0.2"
newspaper4k = "^0.9.3.1"
feed2json = "^2024.4.29"
deepl = "^1.20.0"
pydeeplx = "^1.0.7"
anthropic = "^0.40.0"
openai = "^1.55.3"
google-generativeai = "^0.8.3"
easytranslator = "^2024.6.20"
translators = "^5.9.3"
langdetect = "^1.0.9"
volcengine-python-sdk = { extras = ["ark"], version = "^1.0.111" }
django-huey-monitor = "^0.9.0"
django-text-translator = "^2024.5.1"
pydantic = "^2.10.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
markdownify = "^0.14.1"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"
filelock = "^3.16.1"
fsspec = "^2024.10.0"
google-ai-generativelanguage = "0.6.10"
google-api-core = "^2.23.0"
google-api-python-client = "^2.154.0"
google-auth = "^2.36.0"
google-auth-httplib2 = "^0.2.0"
googleapis-common-protos = "^1.66.0"
greenlet = "^3.1.1"
grpcio = "^1.68.0"
grpcio-status = "^1.68.0"
h11 = "^0.14.0"
httpcore = "^1.0.7"
httplib2 = "^0.22.0"
huggingface-hub = "^0.26.3"
idna = "^3.10"
joblib = "^1.4.2"
nltk = "^3.9.1"
numpy = "^2.1.3"
pandas = "^2.2.3"
pillow = "^11.0.0"
proto-plus = "^1.25.0"
protobuf = "^5.29.0"
pyasn1 = "^0.6.1"
pyasn1-modules = "^0.4.1"
pycparser = "^2.22"
pydantic-core = "^2.27.1"
pyparsing = "^3.2.0"
python-stdnum = "^1.20"
pytz = "^2024.2"
pyyaml = "^6.0.2"
regex = "^2024.11.6"
requests-file = "^2.1.0"
rsa = "^4.9"
setuptools = ">=69.1.1,<70.2"
sgmllib3k = "^1.0.0"
six = "^1.16.0"
sniffio = "^1.3.1"
socksio = "^1.0.0"
soupsieve = "^2.6"
sqlparse = "^0.5.2"
tldextract = "^5.1.3"
tokenizers = "^0.21.0"
tqdm = "^4.67.1"
typing-extensions = "^4.12.2"
tzdata = "^2024.2"
uritemplate = "^4.1.1"
urllib3 = "^2.2.3"
zope-event = "^5.0"
zope-interface = "^7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
